--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.5+3
+  lottie: ^1.4.2
+  firebase_core: ^1.12.0
+  firebase_database: ^9.0.7
 
 dev_dependencies:
   flutter_test:
